# hs-game

./: AudioJulia.hs  README.md  hs-game.cabal  stack.yaml
app/: Main.hs
shaders/: orbit.glsl
src/Game/: Clock.hs  Env.hs  Graphic.hs  Sound.hs
src/Game/Controller/: Terminal.hs
