cabal-version:       2.4
name:                hs-game
version:             0.0.0.0
synopsis:            See README for more info
description:         See README for more info
license:             Apache-2.0
license-file:        LICENSE
author:              Tristan de Cacqueray
maintainer:          Tristan de Cacqueray <tristanC@wombatt.eu>
copyright:           2020 Tristan de Cacqueray
build-type:          Simple
extra-doc-files:     README.md
tested-with:         GHC == 8.10.1

common common-options
  build-depends:       async
                     , base
                     , binary
                     , bytestring
                     , clock
                     , pulse-simple
                     , mtl
                     , random
                     , say
                     , stm
                     , text
                     , wave

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
                       -Wmissing-deriving-strategies

  default-language:    Haskell2010

  default-extensions:  NumericUnderscores
                     , OverloadedStrings

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Game
                     , Game.Clock
                     , Game.Controller.Terminal
                     , Game.Env
                     , Game.Graphic
                     , Game.Sound

executable hs-game
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       hs-game
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
